--- a/dbc_overflow/app/views/questions/show.html.erb
+++ b/dbc_overflow/app/views/questions/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @question.title %> </h1>
 
-<p><%= @question.content %></p>
+<p id="questions"><%= render @question %></p>
 
 <h2>Answers</h2>
 <table>
