--- a/dbc_overflow/app/views/questions/_form.html.erb
+++ b/dbc_overflow/app/views/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @question, url: questions_path, remote: true do |f| %>
+<%= form_for @question, url: questions_path, html: {class: "pure-form pure-form-stacked"}, remote: true  do |f| %>
   <p>
     <%= f.label :title %>
     <%= f.text_field :title %>
@@ -13,3 +13,20 @@
     <%= f.submit %>
   </p>
 <% end %>
+
+<div id="markdown" style="border">
+
+</div>
+
+
+ <!-- <form class="pure-form pure-form-stacked">
+        <fieldset>
+          <label for="name">Your Name</label>
+          <input type="text" id='name' placeholder='your name'>
+
+          <label for="email">Your Email</label>
+          <input id="email" type="text" placeholder="Your Email">
+
+          <button type='submit' class="pure-button">Sign up</button>
+        </fieldset>
+      </form> -->
